:sparkles: feat(back|tournament): enhance Tournament class with builder pattern and event management